--- a/plugin.xml
+++ b/plugin.xml
@@ -1,25 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <plugin xmlns="http://www.phonegap.com/ns/plugins/1.0"
-        id="com.example.hello"
+        id="co.uk.kaweb.cordova-plugin-filespace"
         version="0.7.0">
 
-  <name>Hello</name>
+  <name>Cordova File Storage Space Plugin</name>
 
   <engines>
     <engine name="cordova" version=">=3.4.0"/>
   </engines>
 
-  <asset src="www/hello.js" target="js/hello.js"/>
-
-  <js-module src="www/hello.js" name="hello">
-    <clobbers target="hello" />
-  </js-module>
-
   <platform name="android">
 
     <config-file target="res/xml/config.xml" parent="/*">
-      <feature name="Hello">
-        <param name="android-package" value="com.example.plugin.Hello"/>
+      <feature name="Cordova File Storage Space Plugin">
+        <param name="android-package" value="co.uk.kaweb.cordovaplugin.filespace"/>
       </feature>
     </config-file>
 
@@ -29,17 +23,13 @@
   <platform name="ios">
     
     <config-file target="config.xml" parent="/widget">
-      <feature name="Hello">
-        <param name="ios-package" value="HWPHello" />
+      <feature name="Cordova File Storage Space Plugin">
+        <param name="ios-package" value="KawebCordovaPluginFileSpace" />
       </feature>
     </config-file>
 
-    <header-file src="src/ios/HWPHello.h" target-dir="HelloPlugin"/>
-    <source-file src="src/ios/HWPHello.m" target-dir="HelloPlugin"/>
-  </platform>
-
-  <platform name="wp7">
-    <source-file src="src/wp7/Hello.cs"/>
+    <header-file src="src/ios/KawebCordovaPluginFileSpace.h" target-dir="FileSpacePlugin"/>
+    <source-file src="src/ios/KawebCordovaPluginFileSpace.m" target-dir="FileSpacePlugin"/>
   </platform>
 
 </plugin>
