--- a/package.json
+++ b/package.json
@@ -1,30 +1,22 @@
 {
-  "name": "cordova-plugin-hello",
-  "version": "0.1.0",
-  "description": "A sample for a new cordova plugin",
+  "name": "kaweb-cordova-plugin-filespace",
+  "version": "0.0.1",
+  "description": "A plugin to get the available free disk space.",
   "cordova": {
-    "id": "cordova-plugin-hello",
+    "id": "cordova-plugin-filespace",
     "platforms": [
       "android",
-      "ios",
-      "wp7"
+      "ios"
     ]
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/don/cordova-plugin-hello.git"
+    "url": "git+https://github.com/kaweb/kaweb-cordova-plugin-filespace.git"
   },
   "keywords": [
     "cordova",
-    "plugin",
-    "hello",
-    "ecosystem:cordova",
-    "cordova-android"
+    "plugin"
   ],
-  "author": "Don Coleman",
-  "license": "Apache-2",
-  "bugs": {
-    "url": "https://github.com/don/cordova-plugin-hello/issues"
-  },
-  "homepage": "https://github.com/don/cordova-plugin-hello#readme"
+  "author": "Kaweb",
+  "license": "Apache-2"
 }
