updated plugin id

--- a/plugin.xml
+++ b/plugin.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <plugin xmlns="http://www.phonegap.com/ns/plugins/1.0"
-        id="co.uk.kaweb.cordova-plugin-filespace"
+        id="kaweb-cordova-plugin-filespace"
         version="0.7.0">
 
   <name>KawebCordovaPluginFileSpace</name>
